--- a/Globomantics.Core/appsettings.json
+++ b/Globomantics.Core/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "GlobomanticsDb": "Server=globosql;Database=Globomantics;User Id=globo_dbuser;Password=SqlonLinux?!;MultipleActiveResultSets=true"
+    "GlobomanticsDb": "Server=mssql;Database=Globomantics;User Id=globo_dbuser;Password=GloboDev!;MultipleActiveResultSets=true"
   },
   "AuthN": {
     "Authority": "https://id-local.globomantics.com:44395",
@@ -8,7 +8,7 @@
     "ClientSecret": "secret",
     "Scopes": "openid profile glob_profile glob_api offline_access"
   },
-  "ApiBaseUrl": "https://www-local.globomantics.com:44395/api/",
+  "ApiBaseUrl": "https://localhost:44376/",
   "Serilog": {
     "MinimumLevel": {
       "Default": "Debug",
