--- a/Globomantics.IdentityServer/appsettings.json
+++ b/Globomantics.IdentityServer/appsettings.json
@@ -1,20 +1,18 @@
 {
   "ConnectionStrings": {
-    "IS4DbConnection": "Server=globosql;Database=GlobomanticsIdSrv;User Id=sa;Password=Sqlc0ntainersFTW!;MultipleActiveResultSets=true",
-    "GlobomanticsDb": "Server=globosql;Database=Globomantics;User Id=globo_dbuser;Password=SqlonLinux?!;MultipleActiveResultSets=true"
+    "IS4DbConnection": "Server=mssql;Database=GlobomanticsIdSrv;User Id=sa;Password=GloboSa!;MultipleActiveResultSets=true",
+    "GlobomanticsDb": "Server=mssql;Database=Globomantics;User Id=globo_dbuser;Password=GloboDev!;MultipleActiveResultSets=true"
   },
   "Email": {
-    "SmtpServer": "globosmtp",
+    "SmtpServer": "smtp-mail",
     "SmtpPort": 25,
     "SenderAddress": "donotreply@globomantics.com"
   },
-  "Serilog": {
-    "MinimumLevel": {
-      "Default": "Debug",
-      "Override": {
-        "Microsoft": "Warning",
-        "System": "Warning"
-      }
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   }
 }
