--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,63 +7,49 @@ services:
       dockerfile: nginx/nginx.Dockerfile
     depends_on:
       - globomantics.identityserver
+      - globomantics.ui
     ports:
       - "44395:44395"
     networks:
       globonet:
-        aliases: 
+        aliases:
           - "id-local.globomantics.com"
           - "www-local.globomantics.com"
 
-  globomantics.identityserver: 
+  globomantics.identityserver:
     image: ${DOCKER_REGISTRY-}globomanticsidentityserver
     build:
       context: .
-      dockerfile: Globomantics.IdentityServer/Dockerfile 
-    depends_on:
-      - globosql
+      dockerfile: Globomantics.IdentityServer/Dockerfile
     environment:
-      - ASPNETCORE_URLS=http://*:5000
+        - ASPNETCORE_URLS=http://*:5000
     ports:
       - "5000:5000"
     networks:
       - globonet
 
-  globomantics.ui: 
+  globomantics.ui:
     build:
       context: .
-      dockerfile: Globomantics.Core/Dockerfile      
+      dockerfile: Globomantics.Core/Dockerfile
     environment:
-      - ASPNETCORE_URLS=http://*:5005
-    depends_on:
-      - globosql
+        - ASPNETCORE_URLS=http://*:5005
     ports:
       - "5005:5005"
     networks:
       - globonet
-
-  globomantics.api: 
-    build:
-      context: .
-      dockerfile: Globomantics.Api/Dockerfile      
-    environment:
-      - ASPNETCORE_URLS=http://*:5006
-    ports:
-      - "5006:5006"
-    networks:
-      - globonet
-
-  globoseq:
+    
+  seq-logging:
     image: datalust/seq
     restart: unless-stopped
     ports:
-      - "5342:80"
+      - "5341:80"
     environment:
       - ACCEPT_EULA=Y
     networks:
       - globonet
 
-  globosmtp:
+  smtp-mail:
     image: rnwood/smtp4dev
     restart: always
     ports:
@@ -71,18 +57,19 @@ services:
     networks:
       - globonet
   
-  globosql:
+  mssql:
     build:
       context: .
       dockerfile: sql/sql.Dockerfile
     restart: always
     ports:
-      - "1440:1433"   
-    environment:      
+      - "1433:1433"
+    environment:
       - ACCEPT_EULA=Y
-      - SA_PASSWORD=Sqlc0ntainersFTW!
+      - SA_PASSWORD=GloboSa!
     networks:
       - globonet
+
 
 networks:
   globonet: {}
